--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <li>Privacy</li>
             <li>Term</li>
             <li>Safety</li>
+            TEST
           </ul>
           </section>
     </footer>
